# klabautermann

./: .dockerignore  .env.example  .gitignore  .pr-body.txt  .pr-diff.patch  .pre-commit-config.yaml  .pre-commit-guide.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IDEA.md  Makefile  NEWS.md  PROGRESS.md  README.md  build.rs  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: alchemist.md  backend-engineer.md  carpenter.md  chronicler.md  devops-engineer.md  engineer.md  fullstack-engineer.md  graph-engineer.md  helmsman.md  inspector.md  integration-engineer.md  lookout.md  ml-engineer.md  mobile-engineer.md  navigator.md  pm.md  purser.md  qa-engineer.md  researcher.md  scout.md  security-engineer.md  shipwright.md  tech-writer.md  watchman.md
.claude/commands/: shipwright.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
audit/: CURRENT_STATE.md  GAPS.md
config/: scheduler.yaml
config/agents/: archivist.yaml  bard.yaml  executor.yaml  ingestor.yaml  orchestrator.yaml  orchestrator_v2.yaml  researcher.yaml  scribe.yaml  syncer.yaml
config/channels/: telegram.yaml
devnotes/: README.md
devnotes/devops/: pre-commit-setup.md
devnotes/inspector/: sprint2-integration-tests.md
devnotes/navigator/: query-patterns.md
devnotes/pm/: sprint-01-plan.md  sprint-03-plan.md
devnotes/purser/: oauth-flows.md
devnotes/shipwright/: sprint-01-plan.md  sprint-02-plan.md  wave2-work-orders.md
docs/: API.md  ARCHITECTURE_DIAGRAMS.md  CONFIGURATION.md  CYPHER_COOKBOOK.md  DEPLOYMENT.md  PERSONALITY.md  QUICKSTART.md  SECURITY.md  SKILLS.md  TELEGRAM_SETUP.md  TESTING.md  TROUBLESHOOTING.md
docs/blog/: index.html  style.css
examples/: google_workspace_example.py
infrastructure/alertmanager/: alertmanager.yml
infrastructure/prometheus/: alerts.yml  prometheus.yml
migrations/: 001_initial_schema.sql  002_sessions.sql  003_add_image_type.sql  004_tags.sql  005_daily_summaries.sql  006_tag_reports.sql  007_ai_consent.sql  008_tasks.sql  009_user_summary_schedule.sql
scripts/: __init__.py  backup.sh  bootstrap_auth.py  create-issues.sh  generate_issues.py  get_google_token.py  init_database.py  issues.json  restore.sh  setup-branch-protection.sh  start_api.py  test_researcher.py
specs/: GAP_ANALYSIS.md  MAINAGENT.md  PRD.md  RESEARCHER.md  ROADMAP.md
specs/architecture/: AGENTS.md  AGENTS_EXTENDED.md  CHANNELS.md  LORE_SYSTEM.md  MCP.md  MEMORY.md  ONTOLOGY.md
specs/branding/: PERSONALITY.md
specs/infrastructure/: DEPLOYMENT.md
specs/quality/: CODING_STANDARDS.md  LOGGING.md  OPTIMIZATIONS.md  TESTING.md
src/: config.rs  crew.rs  error.rs  main.rs  media.rs  routes.rs  state.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs
src/entries/: handlers.rs  mod.rs  models.rs  transcription.rs
src/klabautermann/: __init__.py  __main__.py
src/klabautermann.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/summary/: gemini.rs  handlers.rs  mod.rs  models.rs  scheduler.rs
src/tags/: handlers.rs  mod.rs  models.rs  report.rs
src/tasks/: handlers.rs  models.rs
static/css/: style.css
static/js/: lightbox.js  recorder.js  tags.js  theme.js
tasks/: README.md  SPRINT_1.md  SPRINT_2.md  task_monitor.py
tasks/completed/: T001-docker-compose-config.md  T002-python-dockerfile.md  T003-project-structure.md  T004-env-template.md  T005-pydantic-models.md  T006-ontology-constants.md  T007-init-database.md  T008-logging-system.md  T009-graphiti-client.md  T010-neo4j-client.md  T011-thread-manager.md  T012-exceptions.md  T013-base-channel.md  T014-cli-driver.md  T015-cli-thread-persistence.md  T016-base-agent.md  T017-simple-orchestrator.md  T018-main-entry.md  T019-e2e-test.md  T020-orchestrator-intent-classification.md  T021-agent-delegation-pattern.md  T022-retry-utility.md  T023-ingestor-agent.md  T024-researcher-agent.md  T025-hybrid-search-queries.md  T026-mcp-client-wrapper.md  T027-google-oauth-bootstrap.md  T028-google-workspace-bridge.md  T029-executor-agent.md  T030-gmail-tool-handlers.md  T031-calendar-tool-handlers.md  T032-agent-config-system.md  T033-config-hot-reload.md  T034-main-multiagent-startup.md  T035-sprint2-integration-tests.md  T036-cooldown-detection-query.md  T037-thread-status-lifecycle.md  T038-thread-summary-models.md  T039-llm-summarization-pipeline.md  T040-archivist-agent-skeleton.md  (+33 more)
tasks/in-progress/: T026-mcp-client-wrapper.md  T065-proactive-behavior.md  T074-background-task-tracking.md  T076-channel-integration.md
tasks/pending/: T020-orchestrator-intent-classification.md  T021-agent-delegation-pattern.md  T022-retry-utility.md  T023-ingestor-agent.md  T024-researcher-agent.md  T025-hybrid-search-queries.md  T026-mcp-client-wrapper.md  T027-google-oauth-bootstrap.md  T028-google-workspace-bridge.md  T029-executor-agent.md  T030-gmail-tool-handlers.md  T031-calendar-tool-handlers.md  T032-agent-config-system.md  T033-config-hot-reload.md  T034-main-multiagent-startup.md  T035-sprint2-integration-tests.md  T036-cooldown-detection-query.md  T037-thread-status-lifecycle.md  T038-thread-summary-models.md  T039-llm-summarization-pipeline.md  T040-archivist-agent-skeleton.md  T041-note-node-creation.md  T042-day-node-management.md  T043-message-pruning.md  (+6 more)
templates/: account.html  base.html  crew.html  login.html  register.html  tag_entries.html  tag_report.html  tags.html  tasks.html  timeline.html
tests/: __init__.py  conftest.py
tui-rs/: Cargo.toml
tui-rs/src/: app.rs  commands.rs  lib.rs  main.rs
tui-rs/src/event/: handler.rs  mod.rs
tui-rs/src/theme/: mod.rs  nautical.rs
tui-rs/src/ui/: chat.rs  entities.rs  header.rs  input.rs  layout.rs  loading.rs  markdown.rs  mod.rs
tui-rs/src/ws/: client.rs  messages.rs  mod.rs
(+286 files in other folders)
